<resources>
    <string name="app_name">CONAIR</string>
    <string name="main_home">Home</string>
    <string name="main_trend">Trend</string>
    <string name="main_discover">Discover</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover_diet" formatted="false">❖ Are there any foods I shouldn\'t eat during pregnancy?\n❖ Raw seafood, such as oysters or uncooked sushi.Pate, raw or undercooked meat, poultry, and eggs. All are possible sources of bacteria that can harm your unborn child.\n❖ Many women choose to avoid alcoholic drinks during pregnancy.\n\n ❖ Or linking to other website.
    </string>
    <string name="discover_diet2" formatted="false">❖ Getting into a routine with your baby is a personal thing. You\'ll learn to read your baby\'s cues to develop a pattern of eating, sleeping, and playing that meets your little one\'s needs and works for your family.\n❖ 1\– and 2\–month\–old babies need:\n❖ 12 to 24 ounces of breast milk or formula, though this amount may be as high as 32 ounces.\n❖ About 16 hours of sleep – including nighttime sleep and naps. Three naps during the day (morning, afternoon, and evening) is typical.\n❖ 3 and 4 months most babies need:\n❖ 6 or 7 ounces of breast milk or formula per feeding, though limit this amount to 32 ounces in a 24\–hour period.\n❖ Some parents start solid foods like infant cereal when their baby is 4 months old.\n❖ About 15 hours of sleep in a 24\–hour period – this includes nighttime sleep and naps. Three naps during the day (morning, afternoon, and evening) is typical.\n❖ 5 and 6 months most babies need:\n❖ Up to 32 ounces of breast milk or formula in a 24\–hour period.\n❖ About 14 hours of sleep in a 24\–hour period – this includes nighttime sleep and naps.\n❖ 9 and 10 months most babies need:\n❖ Solid foods three times a day, plus about 24 to 32 ounces of breast milk or formula in a 24\–hour period.\n❖ About 14 hours of sleep in a 24\–hour period – this includes nighttime sleep and naps. Two naps during the day (morning and afternoon) is typical.
    </string>
    <string name="discover_prep" formatted="false">❖ How do I lose weight after I give birth?\n❖ \–  You\'ll likely lose about half of your pregnancy weight gain in the first six weeks after delivery. The baby accounts for about 7.5 pounds, and the amniotic fluid, placenta, and extra body fluids and blood in your body add up to another 8 to 12 pounds.\n❖ For the rest, remember that it took nine months to put on the weight, and it can take just as long or longer for it to come off. A healthy diet combined with regular exercise is the best way to shed the pounds – and keep them off.\n❖ Don\'t start cutting calories right away, though. Caring for a newborn requires lots of energy – and that means giving your body the nutrition it needs.
    </string>
    <string name="dicover_prep2" formatted="false">❖ Track baby\'s growth at home \n❖ Weigh your baby. \n❖ Measure your baby\'s length.\n❖ Measure the circumference of your baby\'s head.\n❖ Once you have these measurements, to find out roughly how your baby compares with other babies the same age.\n\n ❖ What can my baby\'s growth chart tell me?\n❖ Your baby\'s growth chart can give you a general picture of how your baby is developing physically. By comparing your baby\'s measurements – weight, length, and head circumference – to those of other children the same age and sex and to these same measurements from previous checkups, your child\'s doctor can determine whether your baby is growing in a healthy way.\n❖ But don\'t get too hung up on your baby\'s percentiles. Although the current growth charts are a vast improvement over earlier charts, they\'re not the last word on how your baby is doing. The most important thing is that your baby is growing at a steady, appropriate rate over time, not that she\'s hit some magic number.\n❖ Percentiles in a growth chart aren\'t like grades in school. A lower percentile doesn\'t mean there\'s anything wrong with your baby.\n❖ Let\'s say both parents are shorter than average, and your baby grows up to have the same stature. It would be perfectly normal for her to rank consistently in the 10th percentile for height and weight as she grows up.\n❖ There are times when gaining or losing faster than usual is a good thing. If your baby was underweight, for example, it may be a good sign that she\'s gaining ounces faster than she\'s growing inches.\n\n ❖ Or linking to below babycenter website.\n❖ https://www.babycenter.com/0_growth\–charts\–taking\–your\–babys\–measurements_1620.bc?page=3\n❖ The basics of baby schedules: Why, when, and how to start a routine\n❖ Why should I have a schedule for my baby?\n❖ A baby\'s needs aren\'t that complicated – food, sleep, play, and love pretty much sums it up. But knowing what your baby requires when, and how much of it, can be a real challenge. Not to mention balancing your baby\'s needs with your own and those of older children and other family members.\n❖ Many parents find that getting into a regular routine or schedule with their baby makes life much easier: It\'s almost like developing a personalized how\–to manual for your child.\n❖ When can I start?\n❖ Experts disagree on when and how to establish a routine – and even on whether you need a set schedule for your baby. But many experts, say that babies are ready for a general schedule between 2 and 4 months of age.\n❖ How to start a routine\n❖ Most infants\' sleeping and feeding habits become more consistent and predictable after three or four months. You may want to take this opportunity to encourage your baby to follow a more defined schedule.\n❖ Your baby may fall into fairly predictable patterns long before this, however. If that\'s the case, you can gently encourage your baby\'s emerging routine.\n❖ Tracking your child\'s eating, sleeping, and alert times can give you an understanding of his natural rhythms and enable you to pinpoint developing patterns. In the days following delivery, many parents begin to note when their baby feeds, when he poops and pees, when he sleeps and for how long, and so on.\n❖ To log your baby\'s daily routine, you can use a notebook and pen, a computer spreadsheet, or any number of great apps.
    </string>
    <string name="novice_msg" formatted="false">1, Establish your goals. \n❖ 2, Choose efficient exercises. Some exercises will be more efficient than others, and choosing these more efficient exercises means that the amount of time that you do spend exercising will really count.\n❖ 3 Eating and Drinking Right.\n❖ 4 Let your body rest. \n❖ \– Sleeping too little has also been linked to overeating.\n❖ \– Be sure that you don’t deprive your body of sleep energy or you will make it up in calories.\n❖ 5 Get a check\–up.\n❖ 6 Have belief in yourself.\n❖ \– Do not care what other people think. If you are determined and believe that you can achieve your goal of staying fit then you can! Know that feeling when you feel great and strive to reach that goal everyday. Motivate yourself by wanting to continue on this path of fitness and health.

    </string>
    <string name="muscle_msg" formatted="false">❖ Muscle building in the right way\n1.Make realistic goals.  \n❖ Goals should be measurable and specific.\n❖ Also include a timeline for your long\–term goals.\n2 Track your progress. \n3 Talk to a dietitian (Or take the suggestion of our Apps). \n4．Increase your caloric intake. \n5．Choose calorie\–dense foods. \n❖ Try eating: full\–fat dairy products, olive oil, avocado, nuts and nut butters.Avoid eating sugary junk food to increase your calorie intake. Eating cookies, candy, donuts, etc. may help you gain weight, but not in a healthy way.\n❖ 6．Eat adequate protein. Eat healthy carbs immediately before and after your workouts.．Consider drinking a protein supplement.\n❖ “protein powder 6 times a day”,\n❖ “load up on creatine for 6 days”,\n❖ “be sure and eat within 45 minutes of your workout”,\n❖ “never workout longer than 45 minutes”,\n❖ “eat 1 gram of protein per pound of bodyweight”.
    </string>
    <string name="exercise_msg" formatted="false">❖ Maintaining Your New Lifestyle\n1, Establish your goals. Goals can help you stay focused on maintaining your ideal body weight, body fat, muscle, and fitness levels.\n2, Keep going to the gym Being Active Every Day\nA, Walk more.\nB, Change your desk set\–up.\nC, Use a ball chair.\nD, Have walk meetings.\n❖ F, Do more chores\nG, Walk on your breaks\n❖ Fitting Exercise into Your Schedule\n1, Split up your exercises.\n2, Choose efficient exercises. Some exercises will be more efficient than others, and choosing these more efficient exercises means that the amount of time that you do spend exercising will really count.\n❖ Squats. Squats work on your core and leg muscles\n❖ Planks. , for maintaining your core, leg, shoulder, neck, and upper arm muscles.\n❖ Burpees. ,exercise all areas of your body.
    </string>
    <string name="discover_diet3" formatted="false">❖ Maintaining a Balanced Diet\n1, Get rid of any junk food. It is one of the most important components of a fit lifestyle. Many people ignore it, but if you exercise and eat a lot of junk food you will not get any fitter. This is because the junk food turns to fat almost immediately. Junk foods contain little to no nutrition and are high in sodium and sugar. \n❖ Foods to avoid are: \n❖ High in sugar: Donuts, cakes, cookies, pudding, cereals, canned and dried fruits, and sodas.\n❖ High in fat: Processed meats, butter, hydrogenated oil (coconut and palm kernel), shortening, cheese and animal fats.\n❖ High in cholesterol: Egg yolk, fried foods and mayonnaise.\n❖ Avoid anything containing: High fructose corn syrup (HFCS) and Monosodium glutamate 味精 (MSG).\n\n ❖ 2, Eat healthy. You will find that maintaining a healthy and balanced diet can increase energy and productivity, boost your metabolism and make you a happier person because you will be consuming the nutrients and vitamins your body needs.\n❖ Foods to eat are: \n❖ Fresh fruits and vegetables: Melons, bananas, apples, oranges, carrots, onions, broccoli and corn, etc. If you make a salad, the more colorful the better!\n❖ Organic meats: Fish, poultry and beef for protein. Instead of frying the meats, try to bake them with extra virgin olive oil or lemon juice with herbs.\n❖ Grains: Whole wheat toast, oatmeal and pastas.\n❖ Foods high in protein: Tofu, soy beans, egg whites, nuts, cottage cheese and quinoa.\n❖ Foods high in fiber:  Cooked lentils, black beans, green peas, pears, raspberries and oat bran.\n\n ❖ 3 ,Drink 1.5~2 liters (0.5 US gal) of water each day. Water keeps you hydrated and promotes optimal metabolic activity.
    </string>
    <string name="discover_work1">1. Establish your goals\n\n2. Choose efficient exercises\n\n3. Eating and Drinking Right\n\n4. Let your body rest\n\n5. Get a check-up\n\n6. Have belief in yourself\n\n
    </string>
    <string name="discover_work2">❖ Make realistic goals and track your progress timely \n❖ Talk to a dietitian for recommendation \n❖ Increase your caloric intake\n❖ Choose calorie-dense foods\n❖ Eat adequate protein\n❖ Eat healthy carbs immediately before and after your workouts\n❖ Consider drinking a protein supplement: “1 gram of protein per pound of bodyweight”
    </string>
    <string name="discover_work3">1. Establish your goals\n❖ Goals can help you stay focused on maintaining your ideal body weight, body fat, muscle, and fitness levels.\n\n2. Keep going to the gym Being Active Every Day\nA, Walk more\nB, Change your desk set-up\nC, Use a ball chair\nD, Have walk meetings\nF, Do more chores\nG, Walk on your breaks
    </string>
</resources>