<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/discover_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_home"
    android:orientation="vertical"
    tools:context="myapplication.com.bluetoothscales.fragment.DiscoverFragment">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Pregnancy Discover"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/novice_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableEnd="@drawable/down2"
                android:padding="10dp"
                android:text="Recommendation for Novice "
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/novice_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/novice_msg"
                    android:textColor="@color/white" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@color/white" />

            <CheckBox
                android:id="@+id/muscle_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableEnd="@drawable/down2"
                android:padding="10dp"
                android:text="The Secret to Gaining Muscle"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:visibility="gone" />


            <LinearLayout
                android:id="@+id/muscle_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/muscle_msg"
                    android:textColor="@color/white" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@color/white" />


            <LinearLayout
                android:id="@+id/exercise_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercise_msg"
                    android:textColor="@color/white" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@color/white" />

            <CheckBox
                android:id="@+id/tips_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableEnd="@drawable/down2"
                android:padding="10dp"
                android:text="Diet tips"
                android:textColor="@color/grey"
                android:textSize="15sp" />


            <CheckBox
                android:id="@+id/exercise_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableEnd="@drawable/down2"
                android:padding="10dp"
                android:text="Choose Efficiency  exercise"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/discover_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/discover_diet"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="https://www.babycenter.com/pregnancy"
                    android:textColor="@color/blue3" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/discover_tips2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/discover_diet2"
                    android:textColor="@color/white" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/discover_tips3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/discover_diet3"
                    android:textColor="@color/white" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@color/white" />


            <CheckBox
                android:id="@+id/list_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableEnd="@drawable/down2"
                android:padding="10dp"
                android:text="Preparation list"
                android:textColor="@color/grey"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/discover_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Linking to the page 'BABY CENTER' website."
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="https://www.babycenter.com/pregnancy"
                    android:textColor="@color/blue3" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/discover_prep"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/discover_list2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:visibility="gone">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/dicover_prep2"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
