<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/discover_work_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/work_cb1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableEnd="@drawable/down2"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/good"
        android:padding="15dp"
        android:text="Recommendation for Novice "
        android:textColor="@color/grey"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/cb_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textColor="@color/white"
        android:visibility="gone"
        android:text="@string/discover_work1" />

    <CheckBox
        android:id="@+id/work_cb2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableEnd="@drawable/down2"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/news"
        android:padding="15dp"
        android:text="The Secret to Gaining Muscle"
        android:textColor="@color/grey"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/cb_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:visibility="gone"
        android:textColor="@color/white"
        android:text="@string/discover_work2" />
    <CheckBox
        android:id="@+id/work_cb3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableEnd="@drawable/down2"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/pen"
        android:padding="15dp"
        android:text="Being Active Every Day"
        android:textColor="@color/grey"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/cb_tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="@color/white"
        android:layout_margin="15dp"
        android:text="@string/discover_work3" />
    <CheckBox
        android:id="@+id/work_cb4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableEnd="@drawable/down2"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/daocha"
        android:padding="15dp"
        android:text="Diet Tips "
        android:textColor="@color/grey"
        android:textSize="15sp" />
    <LinearLayout
        android:id="@+id/wrok_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/shangyige3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"

            android:src="@drawable/shangyige"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/work_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/discover_work4" />
        <ImageView
            android:id="@+id/xiayige3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:src="@drawable/xiayige" />
    </LinearLayout>

</LinearLayout>